--- a/Module1/[4]Cau_truc_dieu_kien/Bai_tap/[1]Tinh_chi_so_can_nang_cua_co_the.html
+++ b/Module1/[4]Cau_truc_dieu_kien/Bai_tap/[1]Tinh_chi_so_can_nang_cua_co_the.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Tính chỉ số cân nặng của cơ thể</title>
 </head>
 <body>
-$END$
+<script>
+    let inputHeight = parseFloat(prompt("Nhập chiều cao (mét):"));
+    let inputWeight= parseFloat(prompt("Nhập cân nặng (kg):"));
+    let bmi = inputWeight / (inputHeight*inputHeight);
+    if (bmi >= 30) alert("Obese");
+    else if (bmi >= 25) alert("Overweight");
+    else if (bmi >= 18.5) alert("Normal");
+    else alert("Underweight");
+</script>
 </body>
 </html>
