--- a/Module1/[4]Cau_truc_dieu_kien/Bai_tap/[2]Cau_lenh switch-case.html
+++ b/Module1/[4]Cau_truc_dieu_kien/Bai_tap/[2]Cau_lenh switch-case.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Câu lệnh switch-case</title>
 </head>
 <body>
-$END$
+<label for = "inputMonth">Nhập tháng</label>
+<input type = "number" id="inputMonth" width="100">
+<button type="button" id="btn" onclick="cal();">Tính số ngày</button>
+<p id ="result"></p>
+<script>
+    function cal() {
+        let month = parseInt(document.getElementById("inputMonth").value);
+        switch (month) {
+            case 1:
+            case 3:
+            case 5:
+            case 7:
+            case 8:
+            case 10:
+            case 12: {
+                document.getElementById("result").innerText = "Tháng " + month + " có 31 ngày.";
+                break;
+            }
+            case 4:
+            case 6:
+            case 9:
+            case 11: {
+                document.getElementById("result").innerText = "Tháng " + month + " có 30 ngày.";
+                break;
+            }
+            case 2: {
+                document.getElementById("result").innerText = "Tháng " + month + " có 28 hoặc 29 ngày.";
+                break;
+            }
+            default: break;
+        }
+
+    }
+</script>
 </body>
 </html>
