--- a/Module1/[4]Cau_truc_dieu_kien/Thuc_hanh/[7]Su_kien_chuot.html
+++ b/Module1/[4]Cau_truc_dieu_kien/Thuc_hanh/[7]Su_kien_chuot.html
@@ -2,9 +2,146 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Sự kiện bàn phím</title>
+    <style>
+        #nobita{
+            position: absolute;
+            height: 264px;
+            width: auto;
+            left: 0;
+            top: 0;
+        }
+        #nobita2{
+            position: absolute;
+            height: 264px;
+            width: auto;
+            left: 18%;
+            top: 18%;
+        }
+        #doraemon{
+            position: absolute;
+            height: 250px;
+            width: auto;
+            right: 24%;
+            top: 20%;
+        }
+        #doraemon2{
+            position: absolute;
+            height: 150px;
+            width: auto;
+            right: 25%;
+            top: 28%;
+        }
+        #ball{
+            position: absolute;
+            height: 120px;
+            width: auto;
+            left: 37%;
+            top: 55%;
+            z-index: 1;
+        }
+        #goal{
+            position: absolute;
+            height: 250px;
+            width: auto;
+            right: 0;
+            top: 0;
+        }
+        #kick {
+            position: absolute;
+            height: 30px;
+            width: auto;
+            left: 40%;
+            top: 74%;
+            font-size: medium;
+        }
+    </style>
+    <!--    <script src="https://code.jquery.com/jquery-latest.js"></script>-->
 </head>
-<body>
-$END$
+<body onload="docReady()">
+<img src="nobita.jpg" id="nobita" alt="Error">
+<img src="doraemon.jpg" id="doraemon" alt="Error">
+<img src="ball.jpg" id="ball" alt="Error" style="left: 37%; top: 55%" onclick="kick();">
+<img src="goal.jpg" id="goal" alt="Error">
+<img src="nobita2.jpg" id="nobita2" style="display: none;" alt="Error">
+<img src="doraemon2.jpg" id="doraemon2" style="display: none;" alt="Error">
+
+<button type="button" id="kick" disabled onclick="message()">Kick</button>
+<script>
+    let state = false;
+    function docReady() {
+        window.addEventListener("keydown", moveSelection);
+    }
+    function upArrowPressed() {
+        // let element = document.getElementById("nobita");
+        // element.style.top = parseInt(element.style.top) - 20 + 'px';
+        // alert($("#nobita").css("width"));
+        let nobiStyle = document.querySelector("#nobita");
+        let nobi = getComputedStyle(nobiStyle);
+        // (nobi.top).substr(0, nobi.top.length-2);
+        let element = document.getElementById("nobita");
+        element.style.top =  parseInt((nobi.top).substr(0, nobi.top.length-2)) - 50 + 'px';
+        check();
+    }
+    function downArrowPressed() {
+        let nobiStyle = document.querySelector("#nobita");
+        let nobi = getComputedStyle(nobiStyle);
+        let element = document.getElementById("nobita");
+        element.style.top = parseInt((nobi.top).substr(0, nobi.top.length-2)) + 50 + 'px';
+        check();
+    }
+    function leftArrowPressed() {
+        let nobiStyle = document.querySelector("#nobita");
+        let nobi = getComputedStyle(nobiStyle);
+        let element = document.getElementById("nobita");
+        element.style.left = parseInt((nobi.left).substr(0, nobi.left.length-2)) - 50 + 'px';
+        check();
+    }
+    function rightArrowPressed() {
+        let nobiStyle = document.querySelector("#nobita");
+        let nobi = getComputedStyle(nobiStyle);
+        let element = document.getElementById("nobita");
+        element.style.left = parseInt((nobi.left).substr(0, nobi.left.length-2)) + 50 + 'px';
+        check();
+    }
+    function moveSelection(evt) {
+        switch (evt.keyCode) {
+            case 37:
+                leftArrowPressed();
+                break;
+            case 39:
+                rightArrowPressed();
+                break;
+            case 38:
+                upArrowPressed();
+                break;
+            case 40:
+                downArrowPressed();
+                break;
+        }
+    }
+    function check() {
+        let element = document.getElementById("nobita");
+        document.getElementById("kick").disabled = !(element.style.top === "200px" && element.style.left === "300px");
+    }
+    function message() {
+        state = true;
+        alert("Click the ball to kick!");
+        document.getElementById("kick").style.display = "none";
+    }
+    function kick() {
+        if (state) {
+            let element = document.getElementById("ball");
+            element.style.left = 1130 + "px";
+            element.style.top = 45 + "px";
+            document.getElementById("nobita").style.display = "none";
+            document.getElementById("nobita2").style.display = "block";
+            document.getElementById("doraemon").style.display = "none";
+            document.getElementById("doraemon2").style.display = "block";
+        }
+        else alert('Use "Arrows button" to move Nobita!');
+
+    }
+</script>
 </body>
 </html>
