--- a/Module1/[5]Cau_truc_lap/Bai_tap/[3]Luyen_tap_vong_lap_01.html
+++ b/Module1/[5]Cau_truc_lap/Bai_tap/[3]Luyen_tap_vong_lap_01.html
@@ -15,18 +15,28 @@
     nhiệt độ.
 </p>
 <button type="button" onclick="bai3()">Bài 3</button>
-<p>Hiển thị ra 20 số trong dãy fibonacci đầu tiên.</p>
+<p>Hiển thị ra n số đầu tiên trong dãy Fibonacci. <br>
+    <span id="result3"></span>
+</p>
 <button type="button" onclick="bai4()">Bài 4</button>
-<p>Tìm số đầu tiên trong dãy fibonacci chia hết cho 5.</p>
+<p>Tìm số đầu tiên trong dãy Fibonacci chia hết cho 5.<br>
+    <span id="result4"></span>
+</p>
 <button type="button" onclick="bai5()">Bài 5</button>
-<p>Tính tổng của 20 số đầu tiên trong dãy fibonacci.</p>
+<p>Tính tổng của n số đầu tiên trong dãy Fibonacci.<br>
+    <span id="result5"></span>
+</p>
 <button type="button" onclick="bai6()">Bài 6</button>
-<p>Tính tổng của 30 số chia hết cho 7 đầu tiên trong các số tự nhiên.</p>
+<p>Tính tổng của n số chia hết cho 7 đầu tiên trong các số tự nhiên.<br>
+    <span id="result6"></span>
+</p>
 <button type="button" onclick="bai7()">Bài 7</button>
 <p>Hãy viết một chương trình in ra các số từ 1 đến 100. Nhưng nếu số chia hết cho 3 thì in ra "Fizz", 5 thì in ra "Buzz"
-    thay vì in ra số đó. Và nếu số đó chia hết cho cả 3 và 5 thì in ra chữ "FizzBuzz".</p>
-<button type="button" onclick="bai8()">Bài 8</button>
-<p>Game đoán số</p>
+    thay vì in ra số đó. Và nếu số đó chia hết cho cả 3 và 5 thì in ra chữ "FizzBuzz".<br>
+    <span id="result7"></span>
+</p>
+<!--<button type="button" onclick="bai8()">Bài 8</button>-->
+<!--<p>Game đoán số</p>-->
 <script src="[3]Luyen_tap_vong_lap_01.js"></script>
 </body>
 </html>
