--- a/Module1/[5]Cau_truc_lap/Bai_tap/[4]Luyen_tap_vong_lap_02.html
+++ b/Module1/[5]Cau_truc_lap/Bai_tap/[4]Luyen_tap_vong_lap_02.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Luyện tập vòng lặp 02</title>
 </head>
 <body>
-$END$
+<button type="button" onclick="bai1()">Bài 1</button>
+<p>In dãy Finonaci<br>
+    <span id="result1"></span></p>
+<button type="button" onclick="bai2()">Bài 2</button>
+<p>Tính giai thừa của một số nguyên dương<br>
+    <span id="result2"></span></p>
+<button type="button" onclick="bai3()">Bài 3</button>
+<p>In tam giác vuông. Các góc vuông nằm ở các vị trí khác nhau<br>
+    <span id="result3a"></span><br>
+    <span id="result3b"></span><br>
+    <span id="result3c"></span><br>
+    <span id="result3d"></span><br>
+</p>
+<button type="button" onclick="bai4()">Bài 4</button>
+<p>In hình chữ nhật <br>
+<span id = "result4"></span></p>
+<button type="button" onclick="bai5()">Bài 5</button>
+<p>Viết chương trình tính lãi ngân hàng (lãi mẹ đẻ lại con) khi biết số tiền ban đầu, số tháng cho vay và lãi xuất hàng tháng.<br>
+<span id = "result5"></span></p>
+<button type="button" onclick="bai6()">Bài 6</button>
+<p>In hình trái tim <br>
+<span id="result6"></span></p>
+<script src="[4]Luyen_tap_vong_lap_02.js"></script>
 </body>
 </html>
