--- a/Module1/[8]Lap_trinh_huong_doi_tuong_1/Thuc_hanh/demo.html
+++ b/Module1/[8]Lap_trinh_huong_doi_tuong_1/Thuc_hanh/demo.html
@@ -31,29 +31,30 @@
     grd2.addColorStop(1,"white");
     ctx.fillStyle = grd2;
     ctx.fillRect(10,40,150,80);
+
 </script>
-<script>
-    class Student {
-        constructor(name, age, address) {
-            this.name = name;
-            this.age = age;
-            this.address = address;
-        }
+<!--<script>-->
+<!--    class Student {-->
+<!--        constructor(name, age, address) {-->
+<!--            this.name = name;-->
+<!--            this.age = age;-->
+<!--            this.address = address;-->
+<!--        }-->
 
-        displayStudent() {
-            alert(this.name);
-        }
-    }
+<!--        displayStudent() {-->
+<!--            alert(this.name);-->
+<!--        }-->
+<!--    }-->
 
-    class Lecturer extends Student {
-        constructor(name, age, address, lophoc) {
-            super(name, age, address);
-            this.lophoc = lophoc;
-        }
-    }
+<!--    class Lecturer extends Student {-->
+<!--        constructor(name, age, address, lophoc) {-->
+<!--            super(name, age, address);-->
+<!--            this.lophoc = lophoc;-->
+<!--        }-->
+<!--    }-->
 
-    let student1 = new Student("Ming", 28, "NSL");
-    // student1.displayStudent();
-</script>
+<!--    let student1 = new Student("Ming", 28, "NSL");-->
+<!--    // student1.displayStudent();-->
+<!--</script>-->
 </body>
 </html>
