--- a/Module1/CaseStudy/Yeu_cau_1.html
+++ b/Module1/CaseStudy/Yeu_cau_1.html
@@ -10,7 +10,7 @@
     let idNumber = prompt("Số CMND:");
     let dateOfBirth = prompt("Ngày tháng năm sinh:");
     let email = prompt("Email:");
-    let address = prompt("Địa chỉ:");
+    let addr = prompt("Địa chỉ:");
     let memberType = prompt("Loại thành viên (Diamond, Platinum, Gold, Silver, Member):");
     let discount = prompt("Giảm giá:");
     let amount = prompt("Số lượng đi kèm");
@@ -25,7 +25,7 @@
     if (price === 0) alert("Mời nhập lại loại dịch vụ!");
     else {
         let pay = price * (rentDays*1) * (1 - discount*1 / 100);
-        alert("Tên: " + customerName + "\n" + "Số CMND: " + idNumber + "\n" + "Ngày tháng năm sinh: " + dateOfBirth + "\n" + "Email: " + email + "\n" + "Địa chỉ: " + address + "\n" + "Loại thành viên" + memberType + "Giảm giá: " + discount + "\n" + "Số lượng đi kèm: " + amount + "\n" + "Số ngày thuê: " + rentDays + "\n" + "Loại dịch vụ: " + serviceType + "\n" + "Loại phòng thuê: " + roomType + "\n" + "Tổng số tiền phải trả: " + pay);
+        alert("Tên: " + customerName + "\n" + "Số CMND: " + idNumber + "\n" + "Ngày tháng năm sinh: " + dateOfBirth + "\n" + "Email: " + email + "\n" + "Địa chỉ: " + addr + "\n" + "Loại thành viên" + memberType + "Giảm giá: " + discount + "\n" + "Số lượng đi kèm: " + amount + "\n" + "Số ngày thuê: " + rentDays + "\n" + "Loại dịch vụ: " + serviceType + "\n" + "Loại phòng thuê: " + roomType + "\n" + "Tổng số tiền phải trả: " + pay);
     }
 </script>
 </body>
