--- a/Module1/[10]Xu_ly_chuoi/Thuc_hanh/[2]Kiem_tra_ma_quoc_gia_nuoc_My.html
+++ b/Module1/[10]Xu_ly_chuoi/Thuc_hanh/[2]Kiem_tra_ma_quoc_gia_nuoc_My.html
@@ -13,7 +13,7 @@
     // let inputString2 = "03201-2150";
     // let inputString3 = "7892";
     function is_usZipCode(str) {
-        let pattern = /^[0-9]{5}(?:-[0-9]{4})?$/;
+        let pattern = /^[0-9]{5}(-[0-9]{4})?$/;
         alert(pattern.test(str));
     }
 </script>
